--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -171,6 +171,9 @@
                     android:id="@+id/recyclerView"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:clipToPadding="false"
+                    android:paddingLeft="22dp"
+                    android:paddingRight="22dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/textView9" />
@@ -189,6 +192,7 @@
                     app:layout_constraintTop_toBottomOf="@+id/recyclerView" />
 
                 <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/recyclerView2"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     app:layout_constraintTop_toBottomOf="@+id/textView10" />
@@ -335,7 +339,7 @@
                         android:layout_height="wrap_content"
                         android:text="Settings"
                         android:textAlignment="center"
-                        android:textColor="#676767"
+                         android:textColor="#676767"
                         android:textSize="12sp" />
                 </LinearLayout>
             </LinearLayout>
@@ -343,16 +347,18 @@
 
         </com.google.android.material.bottomappbar.BottomAppBar>
 
-        <!--        <com.google.android.material.floatingactionbutton.FloatingActionButton-->
-        <!--            android:layout_width="wrap_content"-->
-        <!--            android:layout_height="wrap_content"-->
-        <!--            android:backgroundTint="#ff5e00"-->
-        <!--            android:elevation="3dp"-->
-        <!--            android:src="@drawable/shopping_cart"-->
-        <!--            app:backgroundTint="#ff5e00"-->
-        <!--            android:id="@id/app_bar">-->
+                <com.google.android.material.floatingactionbutton.FloatingActionButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:backgroundTint="#ff5e00"
+                    android:elevation="3dp"
+                    android:src="@drawable/shopping_cart"
+                    app:backgroundTint="#ff5e00"
+                    app:maxImageSize="30dp"
+                    app:tint="#fff"
+                    app:layout_anchor="@id/app_bar">
 
-        <!--        </com.google.android.material.floatingactionbutton.FloatingActionButton>-->
+                </com.google.android.material.floatingactionbutton.FloatingActionButton>
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
