--- a/app/src/main/res/layout/activity_show_detail.xml
+++ b/app/src/main/res/layout/activity_show_detail.xml
@@ -34,10 +34,11 @@
                 android:text="$"
                 android:textAlignment="center"
                 android:textColor="#ff5e00"
-                android:textSize="24sp"
+                android:textSize="22sp"
+                android:textStyle="bold" />
 
             <ImageView
-                android:id="@+id/imageView6"
+                android:id="@+id/picfood"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:srcCompat="@drawable/pizza" />
