--- a/app/src/main/res/layout/activity_cart_list.xml
+++ b/app/src/main/res/layout/activity_cart_list.xml
@@ -32,6 +32,7 @@
                 android:textStyle="bold" />
 
             <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/cartView"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
@@ -176,9 +177,9 @@
         android:layout_height="wrap_content"
         android:text="Your Cart Is Empty"
         android:textSize="16sp"
-        android:visibility="gone"
+        android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="@+id/scrollView3"
-        app:layout_constraintEnd_toEndOf="@+id/scrollView3"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/scrollView3"
         app:layout_constraintTop_toTopOf="@+id/scrollView3" />
 
@@ -329,6 +330,7 @@
         </com.google.android.material.bottomappbar.BottomAppBar>
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/cartBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:backgroundTint="#ff5e00"
